Mejoras UI + cambio ubicación botones Bloques de datos

--- a/modules/stic_Advanced_Web_Forms/custom_views/details/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/details/steps/step1.html
@@ -1,5 +1,5 @@
 <!-- Main Panel -->
-<main class="wizard-main flex-fill d-flex flex-column" x-data="DetailsStep1.mainStep1xData();">
+<main x-data="DetailsStep1.mainStep1xData();">
     <div class="container">
         <!-- Publish Form -->
         <div class="card p-2 mt-4" x-data="{ formPublishTabSelected:'link' }">
