--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
@@ -1,5 +1,5 @@
-<main class="wizard-main flex-fill d-flex flex-column" x-data="WizardStep2.mainStep2xData();">
-  <form id="wizard-step1-form" class="needs-validation" style="width: 100%">
+<main x-data="WizardStep2.mainStep2xData();">
+  <form id="wizard-step1-form" class="needs-validation container mt-5" style="max-width: 900px;">
     <div class="container">
       <div class="row">
         <!-- Name -->
