--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step3.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step3.html
@@ -1,7 +1,7 @@
 <!-- Main Panel -->
-<main class="wizard-main flex-fill d-flex flex-column" x-data="WizardStep3.mainStep3xData();">
+<main x-data="WizardStep3.mainStep3xData();">
     <!-- Flows -->
-    <div class="flex-fill border rounded p-2 overflow-auto">
+    <div>
         <h2 class="mb-2" x-text="utils.translate('LBL_FLOWS')"></h2>
         <!-- Show all Actions -->
         <div class="text-muted form-check form-switch small p-3" x-init="utils.setInlineHelpQtip()">
