--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step5.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step5.html
@@ -1,6 +1,6 @@
 <!-- Main Panel -->
-<main class="wizard-main flex-fill d-flex flex-column" x-data="WizardStep5.mainStep5xData();">
-    <div class="container" style="max-width: 900px;">
+<main x-data="WizardStep5.mainStep5xData();">
+    <div class="container mt-5" style="max-width: 900px;">
         <div class="row">
             <!-- Status -->
             <div class="col-6">
