--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step4.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step4.html
@@ -1,5 +1,5 @@
 <!-- Main Panel -->
-<main class="wizard-main flex-fill d-flex flex-column" x-data="WizardStep4.mainStep4xData();">
+<main x-data="WizardStep4.mainStep4xData();">
     <div class="row h-100 g-0">
         <!-- Themes and configurations -->
          <div class="col-md-3 border-end bg-light overflow-auto p-3" style="max-height: calc(100vh - 200px);">
