--- a/modules/stic_Advanced_Web_Forms/custom_views/details/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/details/steps/step1.html
@@ -1,5 +1,5 @@
 <!-- Main Panel -->
-<main x-data="DetailsStep1.mainStep1xData();">
+<main x-data="DetailsStep1.mainStep1xData();" class="wizard-container wizard-main flex-fill d-flex flex-column">
     <div class="container">
         <!-- Publish Form -->
         <div class="card p-2 mt-4" x-data="{ formPublishTabSelected:'link' }">
