--- a/themes/SuiteP/css/suitep-base/suitepicon.html
+++ b/themes/SuiteP/css/suitep-base/suitepicon.html
@@ -1944,6 +1944,42 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-module-stic-advanced-web-forms-answers"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-advanced-web-forms-answers</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-advanced-web-forms-links"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-advanced-web-forms-links</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-advanced-web-forms-responses"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-advanced-web-forms-responses</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" suitepicon-module-stic-advanced-web-forms"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-advanced-web-forms</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-module-stic-assessments"></i>
             </span>
             <br>
