--- a/modules/stic_Advanced_Web_Forms/ui/WizardView/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/ui/WizardView/steps/step1.html
@@ -1,4 +1,28 @@
-<main x-data="WizardStep2.mainStep2xData();">
+<!-- 
+/**
+ * This file is part of SinergiaCRM.
+ * SinergiaCRM is a work developed by SinergiaTIC Association, based on SuiteCRM.
+ * Copyright (C) 2013 - 2023 SinergiaTIC Association
+ *
+ * This program is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU Affero General Public License version 3 as published by the
+ * Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
+ * details.
+ *
+ * You should have received a copy of the GNU Affero General Public License along with
+ * this program; if not, see http://www.gnu.org/licenses or write to the Free
+ * Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+ * 02110-1301 USA.
+ *
+ * You can contact SinergiaTIC Association at email address info@sinergiacrm.org.
+ */
+ -->
+ 
+ <main x-data="WizardStep2.mainStep2xData();">
   <form id="wizard-step1-form" class="needs-validation container mt-5" style="max-width: 900px;">
     <div class="container">
       <div class="row">
