--- a/themes/SuiteP/css/suitep-base/suitepicon.html
+++ b/themes/SuiteP/css/suitep-base/suitepicon.html
@@ -1989,6 +1989,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" suitepicon-module-stic-assets"></i>
+            </span>
+            <br>
+            <span class='label'>module-stic-assets</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" suitepicon-module-stic-attendances"></i>
             </span>
             <br>
